--- a/ProyectoEstructuras2/src/main/resources/ec/edu/espol/proyectoestructuras2/primary.fxml
+++ b/ProyectoEstructuras2/src/main/resources/ec/edu/espol/proyectoestructuras2/primary.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoestructuras2.PrimaryController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0">
@@ -14,8 +13,7 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="20 Preguntas" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button id="playBTN" mnemonicParsing="false" text="Jugar" />
-                  <Button id="ExitBtn" mnemonicParsing="false" text="Salir" />
+                  <Button id="playBTN" fx:id="BTNjugar" mnemonicParsing="false" text="Jugar" />
                </children>
             </HBox>
          </children>
